feat: Linux instaler (.deb) preko GitHub Actions
Isti okidac i isti Release tag kao Windows instaler, pa na jednom Release-u
stoje i .exe i .deb.

Uz aplikaciju se ne pakuje nista: libvlc dolazi iz sistemskog paketa vlc
(Depends), a shazamio ostaje na postavi-shazam.sh, jer PEP 668 trazi venv u
home-u korisnika.

Runner je pinovan na ubuntu-24.04, ne ubuntu-latest: jpackage upisuje Depends
sa imenima paketa sa build masine (libasound2t64, libglib2.0-0t64), pa bi
pomeranje "latest" na sledece izdanje pokvarilo paket bez izmene u repou.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>